added playground for practice

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "startBabel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
     "startServer": "live-server public/",
-    "start": "npm run startBabel & npm run startServer"
+    "start": "npm run startBabel & npm run startServer",
+    "startPlayground": "babel src/playground/es6-let-const.js --out-file=public/scripts/es6-let-const.js --presets=env,react --watch & live-server public"
   },
   "dependencies": {
     "babel-preset-env": "1.5.2",
