--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "author": "Scott Diemer",
   "license": "MIT",
   "scripts": {
-    "startBabel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
-    "startServer": "live-server public/",
-    "start": "npm run startBabel & npm run startServer"
+    "serve": "live-server public/",
+    "build": "webpack --watch",
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "start": "yarn run build & yarn run serve"
   },
   "dependencies": {
+    "babel-cli": "6.24.1",
     "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1"
+    "babel-preset-react": "6.24.1",
+    "live-server": "^1.2.0",
+    "webpack": "3.1.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
